# nullmailer

./: .gitignore  AUTHORS  BUGS  ChangeLog  ChangeLog.old  HOWTO  INSTALL  Makefile.am  NEWS  README  TODO  YEAR2000  acconfig.h  acinclude.m4  autogen.sh  configure.ac  configure.in  makedist.in  spec
doc/: DIAGRAM  Makefile.am  diagram  mailq.1  nullmailer-dsn.1  nullmailer-inject.1  nullmailer-qmqp.8  nullmailer-queue.8  nullmailer-send.8  nullmailer-smtp.8  nullmailer-smtpd.1  nullmailer-smtpd.8  nullmailer.7  sendmail.1
lib/: Makefile.am  address-old.cc  address.cc  address.h  argparse.cc  argparse.h  autoclose.h  base64.cc  base64.h  canonicalize.cc  canonicalize.h  config_path.cc  config_read.cc  config_readint.cc  config_readlist.cc  config_syserr.cc  configio.h  connect.h  defines.cc  defines.h  errcodes.cc  errcodes.h  forkexec.cc  forkexec.h  hostname.cc  hostname.h  itoa.cc  itoa.h  list.h  listtest.cc  make_defines.sh  makefield.cc  makefield.h  mergelib.sh  netstring.cc  netstring.h  selfpipe.cc  selfpipe.h  setenv.cc  setenv.h  (+2 more)
lib/ac/: dirent.h  time.h  wait.h
lib/cli++/: Makefile.am  cli++.h  cli++topod.pl  clitest.cc  main.cc  messages.cc  only_long.cc
lib/fdbuf/: Makefile.am  fdbuf.cc  fdbuf.h  fdbuf_copy.cc  fdbuf_test.cc  fdibuf.cc  fdibuf.h  fdibuf_mystring.cc  fdibuf_netstring.cc  fdobuf.cc  fdobuf.h  fdobuf_chownmod.cc  fdobuf_seek.cc  fdobuf_signed.cc  fdobuf_unsigned.cc  tlsibuf.cc  tlsibuf.h  tlsobuf.cc  tlsobuf.h
lib/mystring/: Makefile.am  append.cc  assign.cc  count.cc  fdobuf.cc  find_first_ch.cc  find_first_of.cc  find_last_ch.cc  find_last_of.cc  iter.cc  iter.h  join.cc  join.h  lower.cc  lstrip.cc  mystring.cc  mystring.h  operator_in.cc  rep.cc  rep.h  rstrip.cc  starts_with.cc  strip.cc  sub.cc  subst.cc  trace.h  upper.cc
protocols/: Makefile.am  protocol.cc  protocol.h  qmqp.cc  smtp.cc  tls_gnutls.cc  tls_none.cc
scripts/: nullmailer-log.run  nullmailer.init  nullmailer.run  nullmailer.service  run-svc
src/: Makefile.am  address-main.cc  bounce.cc  dsn.cc  inject.cc  mailq.cc  queue.cc  send.cc  sendmail.cc  smtpd.cc
test/: Makefile.am  accept-qmqp.sh  accept-smtp.sh  address-test  address-test.cc  address-trace.cc  argparse-test.cc  authtest-smtp.sh  clitest.cc  clitest.sh  functions  functions.in  runtests  runtests.in
test/tests/: dsn  mailq  protocols  send  smtp-auth  smtpd
test/tests/inject/: bad-headers  date  from  from_  message-id  queue  recips  return-path  sender
test/tests/queue/: rewrite  validate
