noinst_LIBRARIES = libmystring.a
EXTRA_DIST = ChangeLog iter.h join.h mystring.h rep.h trace.h

INCLUDES = -I..

libmystring_a_SOURCES = \
	append.cc \
	assign.cc \
	count.cc \
	fdobuf.cc \
	find_first_ch.cc \
	find_first_of.cc \
	find_last_ch.cc \
	find_last_of.cc \
	iter.cc \
	join.cc \
	lower.cc \
	lstrip.cc \
	mystring.cc \
	rep.cc \
	rstrip.cc \
	sub.cc \
	subst.cc \
	strip.cc \
	upper.cc
